[gd_scene load_steps=2 format=3 uid="uid://cg068o0hw2swp"]

[ext_resource type="Script" uid="uid://bkbyobc4phvvc" path="res://popup/base_popup.gd" id="1_28gmf"]

[node name="BasePopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28gmf")
show_background = null

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.49803922)

[node name="Popup" type="PanelContainer" parent="."]
unique_name_in_owner = true
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.38843
offset_top = -59.0
offset_right = 81.38843
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
layout_mode = 2

[node name="TitleBar" type="MarginContainer" parent="Popup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/VBoxContainer/TitleBar"]
layout_mode = 2

[node name="Title" type="Label" parent="Popup/VBoxContainer/TitleBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Popup"
horizontal_alignment = 1

[node name="ButtonClose" type="Button" parent="Popup/VBoxContainer/TitleBar/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = "x"
flat = true

[node name="Content" type="MarginContainer" parent="Popup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/VBoxContainer/Content"]
layout_mode = 2

[node name="Text" type="Label" parent="Popup/VBoxContainer/Content/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Popup text"
horizontal_alignment = 1
vertical_alignment = 1
